<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.forstudy.main.MainActivity" >

    <Button
        android:id="@+id/menu_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/menu_1" />

    <Button
        android:id="@+id/menu_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_1"
        android:text="@string/menu_2" />

    <Button
        android:id="@+id/menu_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_2"
        android:text="@string/menu_3" />

</RelativeLayout>